# SlicerCochlea

./: .gitignore  .project  CMakeLists.txt  README.md  SlicerCochlea.s4ext  ToDos.txt  link2Me.sh  link2MeWin.BAT  tstCMD.sh
CochleaReg/: CMakeLists.txt  CochleaReg.py
CochleaReg/Testing/Python/: CMakeLists.txt  CochleaRegModuleTest.py  CochleaRegistrationTest.py
CochleaSeg/: CMakeLists.txt  CochleaSeg.py
CochleaSeg/Testing/Python/: CochleaSegModuleTest.py  CochleaSegmentationTest.py
Doc/: SlicerCochleaDoc.html
VisSimCommon/: CMakeLists.txt  VisSimCommon.py
VisSimCommon/Testing/Python/: VisSimCommonModuleTest.py
docs/: index.html
docs/elastixPars/: parCochReg.txt  parCochSeg.txt  parCochSegNR.txt
